# semantic-cache-key-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/semantic_cache_key/: __init__.py  key.py
tests/: test_key.py
